--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
             <version>2.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.7.0</version>
+        </dependency>
+
+
         <!-- 스프링 시큐리티 -->
         <dependency>
             <groupId>org.springframework.security</groupId>
